fix video visible

--- a/style.css
+++ b/style.css
@@ -90,7 +90,6 @@ h2.section-title {
 }
 
 .video-wrapper {
-  aspect-ratio: 16 / 9;
   width: 100%;
 }
 
@@ -112,8 +111,7 @@ iframe {
 
 video {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
   display: block;
 }
 
@@ -155,7 +153,7 @@ footer {
   }
 
   .video-wrapper {
-    aspect-ratio: 16 / 9;
+    width: 100%;
   }
 
   .media-container.chart-wrapper {
